--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 certifi==2022.12.7
 charset-normalizer==3.0.1
 idna==3.4
+markdown-it-py==2.1.0
+mdurl==0.1.2
 numpy==1.24.1
 pandas==1.5.3
+Pygments==2.14.0
 python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.28.2
+rich==13.2.0
 six==1.16.0
 tabulate==0.9.0
 urllib3==1.26.14
